[project]
name = "tufin-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiosqlite>=0.22.1",
    "asteval>=1.0.8",
    "fastapi>=0.135.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]


[project.optional-dependencies]
dev = []


